// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases css large exported tests should allow to create css modules: dev 1`] = `
Object {
  "placeholder": "my-app-_tailwind_module_css-placeholder-gray-700",
}
`;

exports[`ConfigTestCases css large exported tests should allow to create css modules: prod 1`] = `
Object {
  "placeholder": "-dcadb0ba74d8edf55c3-placeholder-gray-700",
}
`;
